# dotai

./: .gitignore  AI.md  CI_PERFORMANCE_SCRATCHPAD.md  README.md  WINDOWS_COMPATIBILITY.md  calc-ci.sh  disable-windows-statusline.bat  fix-unix-statusline.sh  fix-windows-statusline.bat  install.bat  install.ps1  install.sh  jq-patch.bat  jq-patch.ps1  jq-patch.sh  lgtm  mcp.json  path-utils.bat  path-utils.sh  skills.json  sync-coder-workspaces.sh  sync-mcp.bat  sync-mcp.ps1  sync-mcp.sh  zai  zai.ps1
.claude/: claude-notify-config.json  claude-notify.py  claude-powerline.json  settings.json  statusline-command.sh  statusline-enhanced.py  statusline-enhanced.sh  statusline-wrapper.sh
.claude/agents/: code-searcher.md  get-current-datetime.md  git-committer.md
.claude/commands/: commit.md  deslop.md  notification.md
.claude/plugins/: installed_plugins.json  known_marketplaces.json
.codex/: config.toml
.gemini/workflows/: brainstorm.md  commit.md  concise.md  deslop.md  gh-address-pr-reviews.md  gh-fix-issue.md
.github/: .release-please-manifest.json  branch-protection.md  release-please-config.json
.github/release-notes/: preview.md  release.md
.github/workflows/: ci.yml  release-please.yml  release.yml
.opencode/: opencode.json  opencode.jsonc  package-lock.json  package.json  tui.json
.opencode/agent/: code-searcher.md  get-current-datetime.md  git-commiter.md
.opencode/agents/: git-commiter.md  gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-integration-checker.md  gsd-nyquist-auditor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md  pr-babysitter.md
.opencode/command/: brainstorm.md  commit.md  concise.md  deslop.md  gh-address-pr-reviews.md  gh-fix-issue.md
.opencode/commands/: commit.md  concise.md  deslop.md
.opencode/get-shit-done/: INSTALLED_FILES.json  package.json
.opencode/plugin/: branch-injector.ts  gemini-tools.ts  notification.ts  (+1 more)
.planning/: config.json
.zed/: settings.json
agent/: .fallowrc.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  QA.md  README.md  REMOTE.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
android/: .editorconfig  .gitignore  BACKGROUND_TERMINAL_REFACTOR.md  PLAN.md  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  coder_font.cpp  coder_font.h  coder_jni.cpp  coder_renderer.cpp  coder_renderer.h  coder_shaders.h.in  coder_terminal.cpp  coder_terminal.h
android/app/src/main/cpp/cmake/: FindPNG.cmake
android/app/src/main/cpp/shaders/: solid.frag  solid.vert  terminal.frag  terminal.vert
glance/: .dockerignore  Dockerfile  README.md  compose.yml  package-lock.json  package.json  server.js  tsconfig.json
tests/: install-github-package-test.sh  shell-workflows-test.sh
(+1869 files in other folders)
